# mycobot280-weaving-lfd

./: .gitignore  CLAUDE.md  README.md
docs/: dmp_integration.md  review_w1-w2.md  schedule.md  trajectory_csv_schema.md
patches/: mycobot_description-setup_cfg.patch
scripts/: install_python_deps.sh  install_ros2_humble.sh
src/: ros2.repos
src/mycobot_280_lfd_data/: package.xml  setup.cfg  setup.py
src/mycobot_280_lfd_data/mycobot_280_lfd_data/: __init__.py  ik_check.py  schema.py  synth.py  tf_publisher.py
src/mycobot_280_lfd_data/samples/: line_sample.csv
src/mycobot_280_lfd_description/: CMakeLists.txt  package.xml
src/mycobot_280_lfd_description/config/: controllers.yaml
src/mycobot_280_lfd_description/launch/: control.launch.py  display.launch.py  gazebo.launch.py  spawn_workpiece.launch.py
src/mycobot_280_lfd_description/models/lfd_workpiece/: model.config  model.sdf
src/mycobot_280_lfd_description/rviz/: display.rviz
src/mycobot_280_lfd_description/urdf/: mycobot_280_m5.ros2_control.xacro  mycobot_280_m5.urdf.xacro  mycobot_280_m5_gazebo.urdf.xacro  mycobot_280_m5_system.urdf.xacro
src/mycobot_280_lfd_dmp/: package.xml  setup.cfg  setup.py
src/mycobot_280_lfd_dmp/launch/: dmp_compare.launch.py
src/mycobot_280_lfd_dmp/mycobot_280_lfd_dmp/: bridge.py  env_check.py  model.py  reproduce_cli.py  train.py
src/mycobot_280_lfd_dmp/rviz/: dmp_compare.rviz
src/mycobot_280_lfd_moveit_config/: CMakeLists.txt  package.xml
src/mycobot_280_lfd_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/mycobot_280_lfd_moveit_config/launch/: demo.launch.py  gazebo_demo.launch.py  moveit.rviz  trajectory_view.rviz
src/mycobot_280_lfd_moveit_config/srdf/: mycobot_280.srdf
