<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_280_lfd_description</name>
  <version>0.1.0</version>
  <description>
    myCobot 280 (M5) URDF/xacro for the weaving-LfD pipeline.
    Patched from elephantrobotics/mycobot_ros2 mycobot_description:
    non-zero joint velocity limits + inertial blocks for MoveIt2/Gazebo.
  </description>
  <maintainer email="jw940310@gmail.com">jwkim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <!-- 메시(.dae)는 업스트림 패키지를 그대로 참조 -->
  <exec_depend>mycobot_description</exec_depend>

  <!-- display.launch.py -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- control.launch.py (fake controller) -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <!-- gazebo.launch.py -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
